refactor: added some new css styles

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,11 @@
+#app {
+    min-height: 90vh;
+}
+
+footer {
+    min-height: 10vh;
+}
+
 .loading-wrapper {
     display: flex;
     justify-content: center;
